Waiting Screen with Slider

--- a/app/pages/checkin/checkin.scss
+++ b/app/pages/checkin/checkin.scss
@@ -8,4 +8,16 @@
   .contact-icon{
     color: rgb(102, 102, 102);
   }
+
+  .item-appointment{
+    padding: 0px;
+
+    .item-inner{
+      padding: 0px;
+    }
+
+    ion-label{
+      margin: 0px;
+    }
+  }
 }
