--- a/app/pages/time/time.scss
+++ b/app/pages/time/time.scss
@@ -1,3 +1,19 @@
 .time{
+  .slides-quality{
+    height: 90%;
+  }
 
+  .slide-zoom{
+    height: 100%;
+  }
+
+  .card-quality{
+    height: 90%;
+  }
+
+  .display-time{
+    height: 10%;
+    font-size: large;
+    color:  rgb(69, 163, 161);
+  }
 }
