--- a/app/pages/time/time.scss
+++ b/app/pages/time/time.scss
@@ -1,6 +1,6 @@
 .time{
   .slides-quality{
-    height: 90%;
+    height: 100%;
   }
 
   .slide-zoom{
@@ -35,8 +35,8 @@
   }
 
   .btn-quality{
-    top: 35%;
-    right: 10%;
+    margin-top: -48px;
+    margin-left: 20%;
   }
 
   .title{
